# EnsemQuery

./: README.md  pyproject.toml
ensembl_cli/: __main__.py  cli.py  ensembl_api.py  utils.py
ensembl_cli/handlers/: file_handler.py  file_spec.py
ensembl_cli/services/: vep_service.py
ensembl_cli/services/tests/: test_vep_service.py
ensemquery/: __main__.py  cli.py  ensembl_api.py  utils.py
ensemquery/handlers/: file_handler.py
ensemquery/services/: vep_service.py
ensemquery/services/tests/: test_vep_service.py
tests/: conftest.py  test_vep_e2e.py
tests/mock-data/: variants.txt
