[tool.poetry]
name = "ensembl-vep-cli"
version = "0.1.0"
description = "Fetch variant consequences based on a variant identifier"
authors = ["Tiffany R. Williams <trowilliams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
ruff = "^0.0.289"
requests = "^2.31.0"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
src = ["ensembl_cli"]
