[tool.poetry]
name = "ensembl_cli"
version = "0.1.0"
description = "Fetch variant consequences based on a variant identifier"
authors = ["Tiffany R. Williams <trowilliams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ensembl = 'ensembl_cli.__main__:app'

[tool.ruff]
line-length = 88
src = ["ensembl_cli"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')"
]
