[tool.poetry]
name = "EnsemQuery"
version = "0.1.0"
description = "A CLI for fetching and saving genetic data from Ensembl endpoints. Currently supports VEP, designed for future extensibility."
authors = ["Tiffany R. Williams <trowilliams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
requests = "^2.31.0"
pytest = "^7.4.2"
ruff = "^0.0.289"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eqry = 'ensemquery.__main__:app'

[tool.ruff]
line-length = 88
src = ["ensemquery"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')"
]
